--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!doctype html> <!-- had to look this one up -->
+<html>
+  <head>
+    <title>This is the title.</title>
+  </head>
+  <body>
+
+  </body>
+</html>
